--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>electron-python-2</title>
+    <title>Electron Python</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but electron-python-2 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but electron-python doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
